--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@types/node": "^20.4.2",
     "typescript": "^5.1.6",
     "vitest": "^0.33.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.9"
   }
 }
